--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "web3react",
+  "name": "web2react",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://github.com/Qurrtayunin/WEB3-ANTD-15116.git",
+  "homepage": "https://qurrtayunin.github.io/WEB3-ANTD-15116",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.0.3",
+    "antd": "^4.1.0",
     "pdf-viewer-reactjs": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
